<resources>
    <string name="app_name">Calendar View</string>
    <string name="action_about">About</string>
    <string name="simple_calendar">Simple Calendar</string>
    <string name="calendar_day_decorator">Calendar Day Decorator</string>
    <string name="customizing_custom_calendar">Customizing Calendar View</string>

    <array name="calendar_demos">
        <item>@string/simple_calendar</item>
        <item>@string/calendar_day_decorator</item>
        <item>@string/customizing_custom_calendar</item>
    </array>

    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>
</resources>
